# serializer version: 1
# name: test_chat_completion
  'I am an AI language model designed by OpenAI to assist and interact with users like you. How may I assist you today?'
# ---
# name: test_chat_completion_incomplete
  'gpt_fn.exceptions.CompletionIncompleteError: Incomplete response. Max tokens: 1, Finish reason: length'
# ---
# name: test_chat_completion_incomplete.1
  dict({
    'request': dict({
      'frequency_penalty': 0.0,
      'max_tokens': 1,
      'messages': list([
        dict({
          'content': 'You are a helpful assistant.',
          'role': 'system',
        }),
        dict({
          'content': 'Hello, who are you?',
          'role': 'user',
        }),
      ]),
      'model': 'gpt-3.5-turbo',
      'presence_penalty': 0.0,
      'stop': None,
      'temperature': 1.0,
      'top_p': 1.0,
      'user': '',
    }),
    'response': OpenAIObject({
      'choices': list([
        OpenAIObject({
          'finish_reason': 'length',
          'index': 0,
          'message': OpenAIObject({
            'content': 'Hello',
            'role': 'assistant',
          }),
        }),
      ]),
      'created': 1686825615,
      'id': 'chatcmpl-7ReghIuXzu2EP5U0wFP5TiHV4w8cG',
      'model': 'gpt-3.5-turbo-0301',
      'object': 'chat.completion',
      'usage': OpenAIObject({
        'completion_tokens': 1,
        'prompt_tokens': 25,
        'total_tokens': 26,
      }),
    }),
  })
# ---
# name: test_function_completion
  OpenAIObject({
    'arguments': '''
      {
        "destination": "London"
      }
    ''',
    'name': 'book_a_flight',
  })
# ---
# name: test_function_completion_without_neccess_function
  'gpt_fn.exceptions.CompletionIncompleteError: Incomplete response. Max tokens: None, Finish reason: stop Message:Sure, I can assist you with that. Can you please provide me with the date and time for the reservation?'
# ---
# name: test_function_completion_without_neccess_function.1
  dict({
    'request': dict({
      'frequency_penalty': 0.0,
      'function_call': 'auto',
      'functions': list([
        dict({
          'description': '',
          'name': 'book_a_flight',
          'parameters': dict({
            'definitions': dict({
            }),
            'properties': dict({
              'args': dict({
                'items': dict({
                }),
                'title': 'Args',
                'type': 'array',
              }),
              'date': dict({
                'title': 'Date',
                'type': 'string',
              }),
              'destination': dict({
                'title': 'Destination',
                'type': 'string',
              }),
              'kwargs': dict({
                'title': 'Kwargs',
                'type': 'object',
              }),
              'origin': dict({
                'default': 'London',
                'title': 'Origin',
                'type': 'string',
              }),
              'v__duplicate_kwargs': dict({
                'items': dict({
                  'type': 'string',
                }),
                'title': 'V  Duplicate Kwargs',
                'type': 'array',
              }),
            }),
            'required': list([
              'date',
              'destination',
            ]),
            'type': 'object',
          }),
        }),
      ]),
      'messages': list([
        dict({
          'content': 'You are a helpful assistant.',
          'role': 'system',
        }),
        dict({
          'content': 'I want to book a restaurant in London.',
          'role': 'user',
        }),
      ]),
      'model': 'gpt-3.5-turbo-0613',
      'presence_penalty': 0.0,
      'stop': None,
      'temperature': 1.0,
      'top_p': 1.0,
      'user': '',
    }),
    'response': OpenAIObject({
      'choices': list([
        OpenAIObject({
          'finish_reason': 'stop',
          'index': 0,
          'message': OpenAIObject({
            'content': 'Sure, I can assist you with that. Can you please provide me with the date and time for the reservation?',
            'role': 'assistant',
          }),
        }),
      ]),
      'created': 1686825611,
      'id': 'chatcmpl-7RegdRKZCyY8KbX7SW1vXS8PdWDY7',
      'model': 'gpt-3.5-turbo-0613',
      'object': 'chat.completion',
      'usage': OpenAIObject({
        'completion_tokens': 24,
        'prompt_tokens': 78,
        'total_tokens': 102,
      }),
    }),
  })
# ---
